Update docker file and app insight version