@@ -12,4 +12,13 @@ COPY lib/applicationinsights.json /opt/app/
 COPY build/libs/claim-store.jar /opt/app/
 
 EXPOSE 4400
-CMD [ "claim-store.jar" ]
+CMD [ \
+    "--add-modules", "java.se", \
+    "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED", \
+    "--add-opens", "java.base/java.lang=ALL-UNNAMED", \
+    "--add-opens", "java.base/java.nio=ALL-UNNAMED", \
+    "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", \
+    "--add-opens", "java.management/sun.management=ALL-UNNAMED", \
+    "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED", \
+    "claim-store.jar" \
+    ]
